# GGJ2020

./: .gitignore  CMakeLists.txt  README.md  build.sh
assets/shaders/: ambient_lights.frag  main_menu_ambient.frag  test_shader.frag  test_shader.vert
include/SFML/Graphics/: Glsl.hpp  RenderStates.hpp  RenderTarget.hpp  Shader.hpp  Texture.hpp
src/: Main.cpp
src/Core/: Core.cpp  Core.hpp
src/Graphics/: MainWindow.cpp  MainWindow.hpp
src/Object/GameObject/: AGameObject.cpp  AGameObject.hpp  AnimatedGameObject.cpp  AnimatedGameObject.hpp  Animation.cpp  Animation.hpp  IGameObject.hpp  StaticGameObject.cpp  StaticGameObject.hpp
src/Object/GameObject/Objects/: Character.cpp  Character.hpp  FamilyCharacter.cpp  FamilyCharacter.hpp  MilitaryCharacter.cpp  MilitaryCharacter.hpp  PlayerKid.cpp  PlayerKid.hpp  PlayerOld.cpp  PlayerOld.hpp  PlayerSchool.cpp  PlayerSchool.hpp  PlayerSoldat.cpp  PlayerSoldat.hpp
src/Object/SoundObject/: ISoundObject.hpp  MusicObject.cpp  MusicObject.hpp  SoundObject.cpp  SoundObject.hpp
src/Object/UIObject/: AUIObject.hpp  Button.cpp  Button.hpp  Fade.cpp  Fade.hpp  IUIObject.hpp  Rect.cpp  Rect.hpp  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp  TippingText.cpp  TippingText.hpp
src/Scene/: AScene.cpp  AScene.hpp  IScene.hpp  Intro.cpp  Intro.hpp  LevelOne.cpp  LevelOne.hpp  LevelThree.cpp  LevelThree.hpp  LevelTwo.cpp  LevelTwo.hpp  MainMenu.cpp  MainMenu.hpp  SceneManager.cpp  SceneManager.hpp  Settings.cpp  Settings.hpp
src/Utils/: Corruption.cpp  Corruption.hpp  Erosion.cpp  Erosion.hpp  FontLoader.hpp  Shaders.hpp  Using.hpp
src/Utils/Collision/: BitMaskManager.cpp  BitMaskManager.hpp  Collision.cpp  Collision.hpp
src/Utils/Exception/: Exception.cpp  Exception.hpp  MusicError.cpp  MusicError.hpp  ObjectError.cpp  ObjectError.hpp  SceneError.cpp  SceneError.hpp  ShaderError.cpp  ShaderError.hpp
